--- a/printerTest/app/src/main/AndroidManifest.xml
+++ b/printerTest/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.MainActivity">
+        <activity
+            android:label="搜索客户"
+            android:name=".view.activity.OrderClientActivity" />
+        <activity android:name=".view.activity.MainActivity"
+            android:windowSoftInputMode = "stateAlwaysHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
