--- a/printerTest/build.gradle
+++ b/printerTest/build.gradle
@@ -1,14 +1,20 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
+    ext.objectboxVersion = '2.3.4'
+
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url "http://objectbox.net/beta-repo/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        
+        classpath "io.objectbox:objectbox-gradle-plugin:$objectboxVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +25,10 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven {
+            url "http://objectbox.net/beta-repo/"
+        }
     }
 }
 
