--- a/printerTest/app/build.gradle
+++ b/printerTest/app/build.gradle
@@ -4,11 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.daily.jcy.printer"
-<<<<<<< HEAD
-        minSdkVersion 17
-=======
         minSdkVersion 21
->>>>>>> 2ced59842afddb468f74fd71e2a07d21bf2bdcda
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -29,6 +25,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.yanzhenjie.recyclerview:support:1.3.2'
     implementation files('libs/AndroidPrinterSDK3.1.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
