--- a/printerTest/app/src/main/AndroidManifest.xml
+++ b/printerTest/app/src/main/AndroidManifest.xml
@@ -3,22 +3,35 @@
     package="com.daily.jcy.printer">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/AppTheme">
+        <activity android:name=".view.activity.LoginActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
+        <activity
+            android:name=".view.activity.SettingActivity"
+            android:label="设置" />
+        <activity
+            android:name=".view.activity.FoodActivity"
+            android:label="菜品"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
+        <activity
+            android:name=".view.activity.ClientActivity"
+            android:label="客户资料"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
         <activity
             android:name=".view.activity.PrinterActivity"
-            android:label="出单"/>
+            android:label="出单" />
         <activity
             android:name=".view.activity.OrderFoodActivity"
             android:label="选择菜品" />
