--- a/printerTest/app/src/main/AndroidManifest.xml
+++ b/printerTest/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.activity.OrderDetailsActivity"></activity>
+        <activity android:name=".view.activity.OrderDetailsActivity" />
         <activity
             android:name=".view.activity.LoginActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
