--- a/printerTest/app/build.gradle
+++ b/printerTest/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.yanzhenjie.recyclerview:support:1.3.2'
+    implementation 'pub.devrel:easypermissions:1.3.0'
     implementation files('libs/AndroidPrinterSDK3.1.jar')
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
